[tool.poetry]
name = "olympus"
version = "0.0.1"
description = "olympus"
authors = ["Dmytro Podoprosvietov <dp.quant@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dp-quant/olympus"
repository = "https://github.com/dp-quant/olympus"
documentation = "https://olympus.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/dp-quant/olympus/releases"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.19"
celery = "^5.4.0"
djangorestframework = "^3.15.2"
arrow = "^1.3.0"
loguru = "^0.7.3"
django-split-settings = "^1.3.2"
requests = "^2.32.3"
cryptography = "^44.0.1"
psycopg2-binary = "^2.9.10"
pytz = "^2025.1"
orjson = "^3.10.15"
supervisor = "^4.2.5"
gunicorn = "^23.0.0"
json-log-formatter = "^1.1"
twilio = "^9.4.6"
sendgrid-python = "^0.1.1"
django-environ = "^0.12.0"
logtail-python = "^0.3.3"
python-ulid = "^3.0.0"
taskipy = "^1.14.1"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.7.0"
sentry-sdk = "^2.22.0"
django-guardian = "^2.4.0"
django-vite = "^3.1.0"
django-registration = "^5.1.0"
django-tenants = "^3.7.0"


[tool.poetry.group.dev.dependencies]
flower = "^2.0.1"
black = ">=23.10.0"
coverage = {extras = ["toml"], version = ">=7.3.2"}
darglint = ">=1.8.1"
flake8 = ">=6.1.0"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=23.9.16"
furo = ">=2023.9.10"
isort = ">=5.12.0"
mypy = ">=1.6.0"
pep8-naming = ">=0.13.3"
pytest = ">=7.4.2"
pytest-django = "^4.10.0"
pyupgrade = ">=3.15.0"
typeguard = ">=4.1.5"
pygments = "^2.19.1"
flake8-pyproject = "^1.2.3"
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["olympus", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test*.py", "*_test.py", "testing/python/*.py"]
omit = ["*/tests/*"]

[tool.django-stubs]
django_version = "4.2"
django_settings_module = "config.settings"

[tool.mypy_django_plugin]
django_settings_module = "config.settings"

[tool.mypy_drf_plugin]
django_settings_module = "config.settings"

[tool.flake8]
select = ["B", "B9", "C", "D", "DAR", "E", "F", "N", "RST", "S", "W"]
ignore = ["E203", "E501", "RST201", "RST203", "RST301", "W503"]
max-line-length = 120
max-complexity = 10
docstring-convention = "google"
rst-roles = ["class", "const", "func", "meth", "mod", "ref"]
rst-directives = ["deprecated"]
exclude = ".git,__pycache__,docs/conf.py,old,build,dist,*/tests/*,*/migrations/*"
darglint-ignore = ["*/tests/*"]
per-file-ignores = ["tests.py:S101","test_*.py:S101", "*_test.py:S101"]

[tool.pyupgrade]
py312-plus = true

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
source = "."

[tool.taskipy.tasks]
lint = "poetry run isort {source} && poetry run black {source}"
check = "poetry run flake8 {source} && poetry run mypy {source}"
test = "poetry run pytest"
manage = "poetry run python manage.py"
make-migrations = "poetry run python manage.py makemigrations"
migrate = "poetry run python manage.py migrate"
zeus = "poetry run gunicorn config.wsgi:application -c .etc/gunicorn.py"
hermes = "poetry run celery --app config.celery:app worker --concurrency 6 --loglevel INFO -n hermes@%h -Q default,organizations,emails,messages --pidfile /srv/run/application/celeryd.pid"
chronos = "poetry run celery --app config.celery:app beat --loglevel INFO --pidfile /srv/run/application/celeryd.pid --schedule /srv/run/application/celerybeat-schedule"
eirene = "poetry run celery --app config.celery:app flower --pidfile /srv/run/application/celeryd.pid"
